# blog-post-generator-agent

./: .gitignore  README.md  blog-post-agent.ipynb  langgraph.json  pyproject.toml  test.md
agent/: .env.example  .pre-commit-config.yaml  README.md  blog-post-agent.ipynb  langgraph.json  main.py  pyproject.toml  railway.toml  test.py
agent/src/: app.py
agent/src/graph/: graph.py
agent/src/nodes/: chat_node.py  feedback_node.py  generate_blog_node.py  router_node.py
agent/src/schema/: __init__.py  nodes.py  schema.py
agent/src/state/: state.py
agent/src/utils/: utils.py
src/: __init__.py
src/graph/: graph.py
src/nodes/: __init__.py  chat_node.py  generate_blog_node.py  router_node.py  web_search_node.py
src/schema/: nodes.py  schema.py
src/state/: state.py
src/utils/: logger.py  utils.py
ui/: .env.local.example  .env.production.example  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
ui/src/app/: globals.css  initial-state.json  layout.tsx  page.tsx
ui/src/app/api/copilotkit/: route.ts
ui/src/components/: blog-post.tsx  error-boundary.tsx  state-display.tsx
ui/src/styles/: theme.ts
ui/src/types/: blog.ts
